--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "3h-version",
-    "version": "1.4.3",
+    "version": "1.4.5",
     "description": "A package version manager.",
     "main": "lib.js",
     "bin": "cli.js",
@@ -16,7 +16,7 @@
         "version",
         "package",
         "manager",
-        "changlog",
+        "changelog",
         "markdown",
         "semver",
         "3h"
